--- a/_config.yml
+++ b/_config.yml
@@ -115,8 +115,8 @@ analytics:
 author:
   name             : "Chenyuan Liu"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an Master student in University of Chinese Academy of Sciences."
-  location         : "Somewhere"
+  bio              : "Master student in University of Chinese Academy of Sciences."
+  location         : "Shanghai, China"
   email            :
   links:
     - label: "Email"
@@ -232,7 +232,7 @@ timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 
 # Pagination with jekyll-paginate
-paginate: 5 # amount of posts to show
+paginate: 5 # amount of s to show
 paginate_path: /page:num/
 
 # Pagination with jekyll-paginate-v2
