--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ title                    : "David Liu"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Chenyuan Liu"
-description              : "A Master student in University of Chinese Academy of Sciences."
+description              : "Master student in University of Chinese Academy of Sciences."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
