--- a/_config.yml
+++ b/_config.yml
@@ -114,7 +114,7 @@ analytics:
 # Site Author
 author:
   name             : "Chenyuan Liu"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           :  "/assets/images/IMG_1337.HEIC"
   bio              : "Master student in University of Chinese Academy of Sciences."
   location         : "Shanghai, China"
   email            :
