--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ minimal_mistakes_skin    : "air" # "air", "aqua", "contrast", "dark", "dirt", "n
 # Site Settings
 locale                   : "en-US"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
-title                    : "David Liu"
+title                    : "About"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Chenyuan Liu"
@@ -114,7 +114,7 @@ analytics:
 # Site Author
 author:
   name             : "Chenyuan Liu"
-  avatar           :  "/assets/images/IMG_1337.HEIC"
+  avatar           :  # "/assets/images/IMG_1337.HEIC"
   bio              : "Master student in University of Chinese Academy of Sciences."
   location         : "Shanghai, China"
   email            :
