--- a/_config.yml
+++ b/_config.yml
@@ -117,11 +117,12 @@ author:
   avatar           :  # "/assets/images/IMG_1337.HEIC"
   bio              : "Master student in University of Chinese Academy of Sciences."
   location         : "Shanghai, China"
-  email            :
+  email            : "
   links:
-    - label: "Email"
+    - label: "Email: liuchenyuan0902@gmail.com"
       icon: "fas fa-fw fa-envelope-square"
-      url: "liuchenyuan23@mails.ucas.edu.cn"
+      url: "ChenyuanLiu92.github.io"
+      
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
@@ -137,6 +138,10 @@ author:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
+      
+    - label: "Google Scholar"
+      icon: "fab fa-fw fa-graduation-cap"
+      url: "https://scholar.google.com/citations?user=X3rfnOUAAAAJ&hl=zh-CN"
 
 # Site Footer
 footer:
@@ -150,6 +155,7 @@ footer:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: https://github.com/ChenyuanLiu92
+      
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
       # url:
