--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 # main links
 main:
-  - title: "News"
+  - title: "CV"
     url: 
-  - title: "Publication"
+  - title: "Publications"
     url: 
   - title: "Project"
     url: 
