--- a/_config.yml
+++ b/_config.yml
@@ -129,7 +129,7 @@ author:
       icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
     - label: "Google Scholar"
-      icon: "fab fa-fw fa-graduation-cap"
+      icon: "fab fa-fw fa-google"
       url: "https://scholar.google.com/citations?user=X3rfnOUAAAAJ&hl=zh-CN"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
